[tool.poetry]
name = "reflex-suneditor"
version = "0.0.8"
description = "Reflex suneditor"
authors = ["Akshay Awate <akshayawate2012@gmail.com>"]
readme = "README.md"
packages = [{include = "reflex_suneditor"}]

[tool.poetry.dependencies]
python = "^3.7"
reflex = "0.1.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
