[project]
name = "reflex-suneditor"
version = "0.1.0"
description = "Reflex suneditor"
authors = [{ name = "Akshay Awate", email = "akshayawate2012@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["reflex >=0.7.14"]

[dependency-groups]
dev = ["ruff", "pyright"]

[tool.ruff]
target-version = "py310"
output-format = "concise"
lint.isort.split-on-trailing-comma = false
lint.pydocstyle.convention = "google"
lint.select = ["ALL"]
lint.ignore = ["COM", "PLC0414", "RUF012", "TC002"]

[tool.pyright]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
